Fixed # 35396: Android - 1.6.13- when user is prompted with transfer modal user  able to tap on feedback stars Fixed # 35185: Android - app is crashing when user turn off the location services Fixed # 35184: Android-v1.6/1.7 app is crashing when you turn off the locations and upon re-launching the app. Fixed # 35147: Android- user unable to launch  the app when explicitly turning off all the permissions for the  app

--- a/MyHome/app/src/main/res/layout/visit_transfer_dialog.xml
+++ b/MyHome/app/src/main/res/layout/visit_transfer_dialog.xml
@@ -65,18 +65,23 @@
 
             <com.whinc.widget.ratingbar.RatingBar
                 android:id="@+id/rate_provider"
+                android:isIndicator="true"
+                android:saveEnabled="false"
+                android:clickable="false"
+                android:focusableInTouchMode="false"
+                android:focusable="false"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/provider_speciality"
                 android:layout_marginTop="18dp"
                 android:layout_toRightOf="@+id/doc_image"
                 android:paddingLeft="16dp"
-                app:rb_click_rating="true"
                 app:rb_empty="@mipmap/star_empty_grey"
                 app:rb_fill="@mipmap/star_full_grey"
                 app:rb_max_count="5"
                 app:rb_space="15dp"
-                app:rb_touch_rating="true" />
+                app:rb_click_rating="false"
+                app:rb_touch_rating="false"/>
         </RelativeLayout>
 
         <TextView
