--- a/MyHome/app/src/main/res/layout/appointments_details.xml
+++ b/MyHome/app/src/main/res/layout/appointments_details.xml
@@ -41,6 +41,7 @@
             android:layout_height="31dp"
             android:layout_alignBottom="@id/time_header"
             android:layout_alignParentEnd="true"
+            android:contentDescription="@string/add_to_calendar"
             android:src="@mipmap/calendar" />
 
         <RelativeLayout
@@ -130,6 +131,7 @@
             android:layout_below="@id/reason"
             android:layout_marginStart="30dp"
             android:layout_marginTop="35dp"
+            android:importantForAccessibility="no"
             android:src="@mipmap/phone" />
 
         <TextView
@@ -156,6 +158,7 @@
             android:layout_below="@id/phone_icon"
             android:layout_marginStart="30dp"
             android:layout_marginTop="40dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/share_blue" />
 
         <TextView
