--- a/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
+++ b/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
@@ -14,7 +14,9 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:importantForAccessibility="no">
+        android:importantForAccessibility="no"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <LinearLayout
             android:layout_width="0dp"
