--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,11 +11,11 @@
         android:scrollbars="vertical">
 
         <LinearLayout
-            android:id="@+id/whole_layout"
+            android:id="@+id/cost_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="21dp"
             android:layout_marginTop="24dp"
             android:orientation="vertical">
 
@@ -25,89 +26,311 @@
                 android:src="@drawable/mcn_logo" />
 
             <TextView
-                android:id="@+id/costInfo"
-                style="@style/tradeGothicLTStd_Dynamic20"
+                android:id="@+id/cost_info"
+                style="@style/tradeGothicLTStd_Dynamic22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="58dp"
-                android:text="@string/visit_cost_desc"
+                android:text="@string/visit_cost_text"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/coupon_layout"
+            <TextView
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="46dp"
+                android:contentDescription="@string/visit_cost_coupon_label"
+                android:text="@string/visit_cost_coupon_label" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/coupon_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cost_layout"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="21dp"
+            android:visibility="visible">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/coupon_code_textinput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:orientation="horizontal"
-                android:visibility="visible">
+                app:errorEnabled="true"
+                app:errorTextAppearance="@style/error_appearance"
+                app:hintTextAppearance="@style/hint_appearance">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="0dp"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/coupon_code_edittext"
+                    style="@style/tradeGothicLTStdLight_18"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapCharacters|textFilter|textNoSuggestions" />
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/coupon_code_edit_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/visit_cost_coupon_code"
-                        android:inputType="textCapCharacters|textFilter|textNoSuggestions"
-                        tools:text="FREE"
-                        android:textAllCaps="true" />
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:id="@+id/apply_button"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:text="@string/visit_cost_apply"
-                    android:contentDescription="@string/visit_cost_apply" />
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
             <TextView
-                android:id="@+id/coupon_info"
+                android:id="@+id/apply_button"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/coupon_code_textinput"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@id/coupon_code_textinput"
+                android:paddingBottom="26dp"
+                android:contentDescription="@string/apply"
+                android:gravity="center"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="@string/apply"
+                android:textColor="@color/accent"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/coupon_info"
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/coupon_layout"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="21dp"
+            android:visibility="gone"
+            tools:text="Applied Coupon: FREE" />
+
+        <LinearLayout
+            android:id="@+id/payment_info_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/coupon_info"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="21dp"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <TextView
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/payment_information_prompt"
+                android:text="@string/payment_information_prompt" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/card_info"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="16dp"
+                    tools:text="Visa ending in 1234" />
+
+                <TextView
+                    android:id="@+id/update_payment"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/update_payment_method_button"
+                    android:contentDescription="@string/update_payment_method_button"
+                    android:textColor="@color/accent"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/card_expired"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                tools:text="Applied Coupon: FREE"
+                android:text="@string/payment_information_payment_method_expired"
+                android:contentDescription="@string/payment_information_payment_method_expired"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/mcn_dashboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/payment_info_layout"
+            android:adjustViewBounds="true"
+            android:background="@mipmap/mcn_dashboard"
+            android:scaleType="fitCenter"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/whole_payment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mcn_dashboard"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="21dp"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/mcn_logo"
                 android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/payment_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="12dp"
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <TextView
-                    style="@style/tradeGothicLTStd_Dynamic18"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="@string/payment_information_prompt"
-                    android:contentDescription="@string/payment_information_prompt"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/payment_method_info"
+                    android:id="@+id/payment_heading"
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    tools:text="@string/no_payment_method" />
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginLeft="4dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/payment_method"
+                    android:textColor="@color/accent"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
-                <Button
-                    android:id="@+id/payment_method_button"
-                    style="@style/db_scheduleButtonStyle"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/name_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/update_payment_method_button" />
+                    android:layout_weight="1"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/name_edit_text"
+                        style="@style/tradeGothicLTStd_Dynamic18"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="@string/payment_name_on_card"
+                        android:inputType="textCapCharacters|textFilter|textNoSuggestions"
+                        android:textAllCaps="true"
+                        tools:text="James Armstrong" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/card_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/card_edit_text"
+                        style="@style/tradeGothicLTStd_Dynamic18"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:digits="0123456789 "
+                        android:hint="@string/payment_card_number"
+                        android:inputType="number"
+                        tools:text="4111 1111 1111 1111" />
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/month_spinner"
+                        style="@style/tradeGothicLTStd_Dynamic18"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".3"
+                        android:entries="@array/month_numbers" />
+
+                    <Spinner
+                        android:id="@+id/year_spinner"
+                        style="@style/tradeGothicLTStd_Dynamic18"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".3" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/cvv_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:errorTextAppearance="@style/error_appearance"
+                        app:hintTextAppearance="@style/hint_appearance">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/cvv_edit_text"
+                            style="@style/tradeGothicLTStd_Dynamic18"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="@string/payment_cvv"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            tools:text="123" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/pay_zip_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/zipcode_edit_text"
+                        style="@style/tradeGothicLTStd_Dynamic18"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:digits="0123456789"
+                        android:hint="@string/zip"
+                        android:inputType="number"
+                        android:maxLength="5"
+                        tools:text="95012" />
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/billing_address_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="12dp"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/billing_address_heading"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginLeft="4dp"
+                    android:gravity="left"
+                    android:text="@string/billing_address"
+                    android:textColor="@color/accent"
+                    android:textStyle="bold" />
+
+                <include layout="@layout/billing_address_layout" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <ProgressBar
